--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>Introduction</h1>
-<p>Hi, my name is Derek Romney. I like to learn how <br>
+<p>Hi, my name is Derek Christian Romney. I like to learn how <br>
 to program, but I'm still not very good at it yet. </p>
 <h2>Projects</h2>
 <p> Some of the projects that I have worked on are as follows:</p>
