this is  for Activity #5: Using CSS

--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
 
 <head>
-  <title>Derek's Web Server</title>
+  <meta charset="utf-8">
+  <title></title>
   <link rel="stylesheet" href="portfolio.css">
   <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Dosis|Major+Mono+Display" rel="stylesheet">
 </head>
@@ -10,7 +11,7 @@
 <body>
   <section>
     <aside>
-      <h1>Derek Romney</h1>
+      <h1>Contact Info</h1>
       <nav>
         <ul>
           <li><a href="/">Home</a></li>
@@ -21,15 +22,13 @@
       </nav>
     </aside>
     <article>
-      <p>Hi, my name is Derek Romney. I like to learn how <br>
-        to program, but I'm still not very good at it yet. </p>
+      <img src="/instagram_logo.png" alt="instagram_logo" style="width:20px">
+      <p>Instagram: dechrollec <br /> Facebook: Derek Romney</p>
 
-      <a href="https://www.byu.edu/">Go to school here!!</a>
+      <a href="/index.html">return to homepage</a>
     </article>
   </section>
 
-
-
 </body>
 
-<html>
+</html>
