--- a/projects.html
+++ b/projects.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
 
 <head>
-  <title>Derek's Web Server</title>
+  <meta charset="utf-8">
+  <title></title>
   <link rel="stylesheet" href="portfolio.css">
   <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Dosis|Major+Mono+Display" rel="stylesheet">
 </head>
@@ -10,7 +11,7 @@
 <body>
   <section>
     <aside>
-      <h1>Derek Romney</h1>
+      <h1>Projects</h1>
       <nav>
         <ul>
           <li><a href="/">Home</a></li>
@@ -21,15 +22,21 @@
       </nav>
     </aside>
     <article>
-      <p>Hi, my name is Derek Romney. I like to learn how <br>
-        to program, but I'm still not very good at it yet. </p>
+      <h2> Projects I have worked on:</h2>
 
-      <a href="https://www.byu.edu/">Go to school here!!</a>
+      <div class="experiences">
+
+        <ul>
+          <li>Mission inventory project in VBA</li>
+          <li>Scripture Mastery help</li>
+          <li>CS 142 - I know, I don't have a lot</li>
+        </ul>
+      </div>
+      <a href="/index.html">return to homepage</a>
     </article>
   </section>
 
-
-
 </body>
+
 
 <html>
